#348 Tidy up EntityResourceUtils
* Javadoc clarifications & cleanup
* switch expressions instead of instanceof
* getFirst() instead of get(0)
* other misc. improvements